2002-09-17  Richard Williamson   <rjw@apple.com>

        * khtml/khtmlview.cpp:
        (KHTMLView::viewportMouseTripleClickEvent):
        Added implementation.  Same as viewportMouseReleaseEvent
        except dispatches additional MouseTripleClickEvent event.
        
        (KHTMLView::viewportMouseDoubleClickEvent):
        Send extra release event.  This emulates Qt
        behavior.

        * kwq/WebCoreBridge.mm:
        (-[WebCoreBridge mouseUp:]):
        Don't send extra release event here, instead send
        it in viewportMouseDoubleClickEvent and also in
        viewportMouseTripleClickEvent so DOM doesn't get
        confused.
        
        * kwq/KWQColor.mm:
        (QColor::hsv):
        Fixed marklar divide by 0 problemn.
        
        
2002-09-17  Darin Adler  <darin@apple.com>

	- fixed 2936933 -- Pages that claim to be UTF-8 but contain invalid
	sequences do not render at all

	Misc. speed improvements. Total 2.6% speedup for cvs-base.

	Improvements for signals.

        * kwq/KWQChar.mm:
        (QChar::isSpace): Add fast case for ASCII.
        (QChar::lower): Add fast case for ASCII.
        (QChar::upper): Add fast case for ASCII.

        * kwq/qt/qcolor.h: Just store RGB values, not NSColor objects.
        * kwq/KWQColor.mm:
        (QColor::QColor): No need to set color to nil.
        (QColor::name): Use QString::sprintf instead of NSString.
        (QColor::setNamedColor): Use KWQInvalidColor instead of nil.
        (QColor::getNSColor): Make an autoreleased NSColor.

        * kwq/KWQKHTMLPartImpl.mm:
        (moveWidgetsAside): Use isWidget() instead of dynamic_cast.

        * kwq/KWQSignal.h: use a QValueList instead of a fixed-size array.
        * kwq/KWQSignal.mm:
        (KWQSignal::connect): Append to list.
        (KWQSignal::disconnect): Remove from list.
        (KWQSignal::call): Use the QValueList.

        * kwq/KWQSlot.mm:
        (KWQSlot::call): Use static_cast instead of dynamic_cast where possible.
